Soft delete secondary users
